fix: passando senha criptografada no updateUser